--- a/chat-app-server/package.json
+++ b/chat-app-server/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cryptr": "^4.0.2",
     "elasticsearch": "^16.1.1",
     "express": "^4.17.1",
     "express-input-validation": "^1.0.10",
-    "passport": "^0.4.0",
     "pg": "^7.11.0",
+    "request-ip": "^2.1.3",
     "socket.io": "^2.2.0"
   }
 }
