--- a/chat-app-server/package.json
+++ b/chat-app-server/package.json
@@ -18,6 +18,7 @@
     "express-input-validation": "^1.0.10",
     "pg": "^7.11.0",
     "request-ip": "^2.1.3",
+    "simple-encryptor": "^3.0.0",
     "socket.io": "^2.2.0"
   }
 }
