--- a/chat-app-client/package.json
+++ b/chat-app-client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.19.2",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "promise-polyfill": "^8.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
